--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ nav ul li a:hover::after {
 }
 .partners{
 
+  
     position: relative;
     width: 100%;
     /* background: #eceaff; */
@@ -164,7 +165,6 @@ nav ul li a:hover::after {
 }
 
 .partners nav{
-
     background: #1a1a1a;
     width: 100%;
     padding: 0px 15%;
@@ -282,7 +282,7 @@ nav ul li a:hover::after {
 
 /*-- creating and styling starter application form -- daren 8/10   */
 .applicationForm {
-    
+    margin: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -821,15 +821,41 @@ footer {
 
 
 .ExampleClient {
-
     display: flex;
-    padding-top: 200px;
-    
+    justify-content: center;
+    padding: 150px;
 }
 
-.Clientside .Partnerside {
+.Clientside {
+    margin: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: large;
+    background-color: #fff;
+    padding: 50px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    background-color: white;
 }
+
+.Partnerside {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: large;
+    background-color: #fff;
+    padding: 50px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    background-color: white;
+    width: 350px;
+    margin-left: 585px;
+    margin-bottom: 50px;
+}
+
+
+
